[package]
name = "der"
version = "0.4.4" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust embedded-friendly implementation of the Distinguished Encoding Rules
(DER) for Abstract Syntax Notation One (ASN.1) as described in ITU X.690 with
full support for heapless no_std targets
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2018"
repository = "https://github.com/RustCrypto/formats/tree/master/der"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["asn1", "crypto", "itu", "pkcs"]
readme = "README.md"

[dependencies]
crypto-bigint = { version = "0.2", optional = true, features = ["generic-array"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"], default-features = false }
rand_core = { version = "0.6.3", features = ["std"], default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }

[features]
alloc = []
bigint = ["crypto-bigint"]
std = ["alloc"]
default = ["bigint"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
